@@ -32,6 +32,12 @@ typedef struct _LdmGreeterPrivate LdmGreeterPrivate;
 #include "layout.h"
 #include "session.h"
 
+typedef enum
+{
+    LDM_PROMPT_TYPE_QUESTION,
+    LDM_PROMPT_TYPE_SECRET
+} LdmPromptType;
+
 struct _LdmGreeter
 {
     GObject            parent_instance;
@@ -44,7 +50,7 @@ struct _LdmGreeterClass
     GObjectClass parent_class;
 
     void (*connected)(LdmGreeter *greeter);
-    void (*show_prompt)(LdmGreeter *greeter, const gchar *text);
+    void (*show_prompt)(LdmGreeter *greeter, const gchar *text, LdmPromptType type);
     void (*show_message)(LdmGreeter *greeter, const gchar *text);
     void (*show_error)(LdmGreeter *greeter, const gchar *text);
     void (*authentication_complete)(LdmGreeter *greeter);
